--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -12,7 +12,7 @@
         <label for="password">Enter your password: </label>
         <input type="password" id="password" name="password">
 
-        <button type="submit">Sign Up!</button>
+        <button type="submit">Login!</button>
     </form>
 </body>
 </html>
