--- a/src/views/create-message.ejs
+++ b/src/views/create-message.ejs
@@ -2,9 +2,14 @@
 <html lang="en">
 <%- include('partials/header') %>
 <body>
-    <form action="/create-message" method="POST">
+    <nav>
+        <h1 class="homepage-message">Create New Message!</h1>
+        <a href="/" class="nav-buttons">Return Home</a>
+    </nav>
+    <form action="/create-message" method="POST" id="create-form">
+         <h2>Enter Your Message Here:</h2>
         <textarea name="post" id="post" placeholder="Enter your message"></textarea>
-        <button type="submit">Create Post</button>
+        <button type="submit" class="nav-buttons">Create Post</button>
     </form>
 </body>
 </html>
