--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -10,11 +10,11 @@
         <form action="/login" method="post" id="login-form">
             <div>
                 <label for="username">Enter your username: </label>
-                <input type="text" id="username" name="username">
+                <input type="text" id="username" name="username" required>
             </div>
             <div>
                 <label for="password">Enter your password: </label>
-                <input type="password" id="password" name="password">
+                <input type="password" id="password" name="password" required>
             </div>
             <button type="submit" class="nav-buttons">Login!</button>
         </form>
