--- a/src/views/sign-up.ejs
+++ b/src/views/sign-up.ejs
@@ -10,15 +10,15 @@
         <form action="/sign-up" method="post" id="sign-up-form">
             <div>
                 <label for="username">Enter a username: </label>
-                <input type="text" id="username" name="username">
+                <input type="text" id="username" name="username" required>
             </div>
             <div>
                 <label for="password">Enter a password: </label>
-                <input type="password" id="password" name="password">
+                <input type="password" id="password" name="password" required>
             </div>
             <div>
                 <label for="confirmpassword">Enter password again: </label>
-                <input type="password" id="confirmpassword" name="confirmpassword">
+                <input type="password" id="confirmpassword" name="confirmpassword" required>
             </div>
             <button type="submit" class="nav-buttons">Sign Up!</button>
         </form>
