--- a/src/views/create-message.ejs
+++ b/src/views/create-message.ejs
@@ -8,7 +8,7 @@
     </nav>
     <form action="/create-message" method="POST" id="create-form">
          <h2>Enter Your Message Here:</h2>
-        <textarea name="post" id="post" placeholder="Enter your message"></textarea>
+        <textarea name="post" id="post" placeholder="Enter your message" required></textarea>
         <button type="submit" class="nav-buttons">Create Post</button>
     </form>
 </body>
